# typst-brrr

./: .gitignore  Cargo.toml  README.md  build.rs  procinfo_pgo.json  typster.toml
docker-images/bench-end-to-end/: bench.sh  dockerfile
docker-images/bench-walltime/: dockerfile  walltime.sh
docker-images/clone/: clone.sh  dockerfile
docker-images/fetch/: dockerfile  fetch.sh
docker-images/pgo-build/: build.sh
docker-images/pgo-build-profile/: build.sh  dockerfile
docker-images/pgo-profile/: dockerfile  profile.sh
proto/: Cargo.toml
proto/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs  profile.rs  results.rs  sandbox.rs
samples/CeTZ/: main.typ
samples/conformal_prediction/: conformal_prediction.typ  slides.typ
samples/mandelbrot/: mandelbrot.typ
samples/masterproef/: abstract.typ  main.typ
samples/masterproef/assets/: SystemVerilog.sublime-syntax
samples/masterproef/code/adder/: myhdl.py  systemc.c  vhdl.vhdl
samples/masterproef/code/fizzbuzz/: c.c  python.py  rust.rs
samples/masterproef/code/hello_world/: 0.rs  1.rs
samples/masterproef/content/: 0_introduction.typ  1_background.typ  2_ecosystem.typ  3_translation.typ  4_phos.typ  5_examples.typ  6_future_work.typ  7_conclusion.typ  a_annexes.typ  this_document.typ
samples/masterproef/elems/: acronyms.typ  code_blocks.typ  colors.typ  hexagonal.typ  ieee.typ  infos.typ  template.typ  ugent-theme.typ
samples/masterproef/figures/: ring_resonator_field.png:Zone.Identifier
samples/masterproef/figures/drawio/: .$2x2_coupler.drawio.bkp  .$2x2_coupler.drawio.dtmp  .$abstractions.drawio.bkp  .$beam_forming_emission.drawio.bkp  .$beam_forming_emission.drawio.dtmp  .$compiler_arch.drawio.bkp  .$compiler_arch.drawio.dtmp  .$evm.drawio.bkp  .$ex_ast.drawio.bkp  .$ex_ast.drawio.dtmp  .$ex_ast_out.drawio.dtmp  .$execution.drawio.bkp  .$feedforward-pic.drawio.bkp  .$feedforward-pic.drawio.dtmp  .$fig_mvm_mzi.drawio.bkp  .$fig_mvm_mzi.drawio.dtmp  .$graph_representation.drawio.bkp  .$graph_representation.drawio.dtmp  (+17 more)
samples/short-paper_01/: main.typ  refs.bib  table.typ  template.typ
samples/steno-numbers/: jeff-numbers.typ  steno.typ
samples/syntree/: main.typ
samples/tablex/: main.typ
scripts/: build.sh  setup.sh
squid/: squid.conf
src/: build_images.rs  config.rs  docker.rs  main.rs  profile.rs  sandbox.rs
